Improve envelope opening animation timing - show main content earlier

--- a/index.html
+++ b/index.html
@@ -23,18 +23,15 @@
                 <div class="envelope-front">
                     <div class="envelope-content">
                         <p class="envelope-from">From: <span id="fromSender">Gia đình chúng tôi</span></p>
-                        <div class="envelope-divider"></div>
-                        <h3 class="envelope-greeting">Trân trọng kính mời:</h3>
-                        <h2 class="envelope-guest">
-                            <span id="envelopeCustomPronoun"></span>
-                            <span id="envelopeGuestName">Quý khách</span>
-                        </h2>
-                        <p class="envelope-message">Tới dự đám cưới của <span id="envelopeInviteType">chúng tôi</span></p>
+                        <div class="envelope-invitation">
+                            <h3 class="envelope-greeting">Trân trọng kính mời:</h3>
+                            <h2 class="envelope-guest">
+                                <span id="envelopeCustomPronoun"></span>
+                                <span id="envelopeGuestName">Quý khách</span>
+                            </h2>
+                        </div>
                     </div>
                 </div>
-                
-                <div class="envelope-flap"></div>
-                <div class="envelope-back"></div>
                 
                 <!-- Click instruction -->
                 <div class="click-instruction">
