--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
         <section id="invitation" class="invitation-section">
             <div class="container">
                 <div class="invitation-content">
-                    <div class="floral-ornament"></div>
                     <h3 class="invitation-greeting">Trân trọng kính mời:</h3>
                     <h2 class="guest-name">
                         <span id="customPronoun"></span>
@@ -68,60 +67,17 @@
         <!-- Opening Section -->
         <section id="opening" class="opening-section">
             <div class="container">
-                <div class="floral-ornament"></div>
                 <h2 class="section-title">Lời Mở Đầu</h2>
                 <div class="opening-content">
-                    <p class="quote">"Tình yêu không làm cho thế giới quay tròn.<br>Tình yêu là thứ làm cho cuộc hành trình trở nên đáng giá."</p>
-                    <p>Trải qua bao nhiêu kỉ niệm, bao nhiêu cung bậc cảm xúc,<br>
-                    chúng tôi đã quyết định nắm tay nhau bước tiếp chặng đường phía trước.</p>
-                    <p>Rất mong được sự chứng kiến và chúc phúc từ gia đình, bạn bè thân yêu<br>
-                    trong ngày trọng đại nhất cuộc đời chúng tôi.</p>
-                </div>
-            </div>
-        </section>
+                    <p class="quote">"Người ta nói yêu muộn là yêu bằng tất cả những năm tháng từng trải.<br>
+Một người đã bước qua nhiều thăng trầm của cuộc sống,<br>
+một người dành cả tuổi trẻ để học tập và thay mẹ cha chăm lo cho em nhỏ."</p>
 
-        <!-- Love Story Timeline -->
-        <section id="story" class="story-section">
-            <div class="container">
-                <div class="floral-ornament"></div>
-                <h2 class="section-title">Câu Chuyện Tình Yêu</h2>
-                <div class="timeline">
-                    <div class="timeline-item left">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-icon">💕</div>
-                            <h3>Lần Đầu Gặp Gỡ</h3>
-                            <p class="timeline-date">Tháng 03/2020</p>
-                            <p>Chúng tôi gặp nhau lần đầu trong một buổi họp mặt bạn bè. Ánh mắt đầu tiên đã khiến chúng tôi biết rằng, đây là một duyên phận đặc biệt.</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item right">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-icon">💑</div>
-                            <h3>Bắt Đầu Hẹn Hò</h3>
-                            <p class="timeline-date">Tháng 06/2020</p>
-                            <p>Sau những tháng ngày tìm hiểu, chúng tôi chính thức trở thành người yêu của nhau. Mỗi ngày trôi qua đều tràn ngập tiếng cười và hạnh phúc.</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item left">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-icon">💍</div>
-                            <h3>Lời Cầu Hôn</h3>
-                            <p class="timeline-date">Tháng 01/2025</p>
-                            <p>Dưới ánh hoàng hôn lãng mạn, anh đã quỳ gối và hỏi: "Em có muốn làm cô dâu của anh không?". Và câu trả lời chỉ đơn giản là "I do!"</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item right">
-                        <div class="timeline-dot"></div>
-                        <div class="timeline-content">
-                            <div class="timeline-icon">💒</div>
-                            <h3>Đám Cưới</h3>
-                            <p class="timeline-date">Tháng 12/2025</p>
-                            <p>Và giờ đây, chúng tôi sắp chính thức trở thành vợ chồng. Hành trình mới bắt đầu với lời hứa yêu thương trọn đời.</p>
-                        </div>
-                    </div>
+                    <p>Chỉ hơn ba tháng gặp gỡ,<br>
+chúng tôi đã nhận ra sự đồng điệu và mong muốn về một tương lai chung —<br>
+một tình yêu giản dị, bền chặt như <span class="highlight-text">ông bà ta ngày xưa.</span></p>
+                    <p>Trong ngày trọng đại nhất cuộc đời, <br><span class="highlight-text">Chúng tôi rất mong được sự chứng kiến và chúc phúc từ gia đình, bạn bè thân yêu</span>
+                     </p>
                 </div>
             </div>
         </section>
@@ -163,35 +119,22 @@
         <!-- Event Timeline -->
         <section id="events" class="events-section">
             <div class="container">
-                <div class="floral-ornament"></div>
-                <h2 class="section-title">Sự Kiện</h2>
                 <div class="event-cards">
                     <div class="event-card">
-                        <div class="event-time-badge">09:00</div>
-                        <div class="event-icon">💍</div>
-                        <h3>Lễ Ăn Hỏi</h3>
-                        <p class="event-date">Thứ Bảy, 27/12/2025</p>
-                        <div class="event-divider"></div>
-                        <p class="event-location-title">Tư gia nhà gái</p>
+                        <h3 class="event-title">LỄ ĂN HỎI</h3>
+                        <p class="event-time">VÀO LÚC 09 GIỜ 00 | THỨ BẢY</p>
+                        <p class="event-date-large">27.12.2025</p>
+                        <p class="event-description">TỨC NGÀY 08 THÁNG 11 NĂM ẤT TỴ</p>
+                        <p class="event-location-label">TẠI TƯ GIA NHÀ GÁI</p>
                         <p class="event-location">Số nhà 12, đường Lê, thôn Hoàng Trì 2,<br>xã Hoàng Văn Thụ, Hoàng Mai, Hà Nội</p>
                     </div>
                     <div class="event-card highlight">
-                        <div class="event-time-badge">10:00</div>
-                        <div class="event-icon">🚗</div>
-                        <h3>Lễ Đón Dâu</h3>
-                        <p class="event-date">Thứ Bảy, 27/12/2025</p>
-                        <div class="event-divider"></div>
-                        <p class="event-location-title">Tư gia nhà gái</p>
-                        <p class="event-location">Số nhà 12, đường Lê, thôn Hoàng Trì 2,<br>xã Hoàng Văn Thụ, Hoàng Mai, Hà Nội</p>
-                    </div>
-                    <div class="event-card">
-                        <div class="event-time-badge">11:00</div>
-                        <div class="event-icon">🎉</div>
-                        <h3>Tiệc Cưới</h3>
-                        <p class="event-date">Chủ Nhật, 28/12/2025</p>
-                        <div class="event-divider"></div>
-                        <p class="event-location-title">Nhà hàng</p>
-                        <p class="event-location">Địa chỉ nhà hàng tổ chức tiệc cưới<br>(Cập nhật sau)</p>
+                        <h3 class="event-title">LỄ ĐÓN DÂU VÀ TIỆC CƯỚI</h3>
+                        <p class="event-time">VÀO LÚC 10 GIỜ 30 | CHỦ NHẬT</p>
+                        <p class="event-date-large">28.12.2025</p>
+                        <p class="event-description">TỨC NGÀY 09 THÁNG 11 NĂM ẤT TỴ</p>
+                        <p class="event-location-label">TẠI TƯ GIA NHÀ TRAI</p>
+                        <p class="event-location">Thôn Ngũ Phúc, xã Tam Đa, huyện Phù Cừ <br>(nay là xã Tống Trân) Tỉnh Hưng Yên</p>
                     </div>
                 </div>
             </div>
@@ -283,34 +226,10 @@
                     Tuy nhiên, nếu quý vị muốn gửi lời chúc mừng,<br>chúng tôi xin cung cấp thông tin sau:</p>
                     <div class="bank-info">
                         <div class="bank-card">
-                            <div class="bank-icon">🤵</div>
-                            <h3>Chú Rể</h3>
-                            <div class="bank-details">
-                                <p><strong>Trương Minh Thắng</strong></p>
-                                <p>STK: <span class="account-number">1234 5678 9012</span></p>
-                                <p>Ngân hàng: Vietcombank</p>
-                            </div>
-                            <div class="qr-code">
-                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=Bank:Vietcombank-Account:123456789012-Name:TruongMinhThang" alt="QR Code Chú Rể">
-                            </div>
-                            <button class="copy-btn" onclick="copyAccountNumber('1234 5678 9012')">
-                                📋 Sao chép STK
-                            </button>
+                            <img src="images/tk_chure.png" alt="Thông tin tài khoản chú rể">
                         </div>
                         <div class="bank-card">
-                            <div class="bank-icon">👰</div>
-                            <h3>Cô Dâu</h3>
-                            <div class="bank-details">
-                                <p><strong>Lê Thị Sang</strong></p>
-                                <p>STK: <span class="account-number">9876 5432 1098</span></p>
-                                <p>Ngân hàng: Techcombank</p>
-                            </div>
-                            <div class="qr-code">
-                                <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=Bank:Techcombank-Account:987654321098-Name:LeThiSang" alt="QR Code Cô Dâu">
-                            </div>
-                            <button class="copy-btn" onclick="copyAccountNumber('9876 5432 1098')">
-                                📋 Sao chép STK
-                            </button>
+                            <img src="images/tk_codau.png" alt="Thông tin tài khoản cô dâu">
                         </div>
                     </div>
                 </div>
