Improve mobile envelope display and map section spacing
- Optimize envelope-invitation layout for mobile (reduce left margin from 150px to 100px)
- Reduce envelope font sizes for better mobile fit (guest: 18px, greeting: 12px)
- Add word-break and line-height for better text wrapping on mobile
- Increase spacing between map-address and map-detail (8px to 15px)

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                         <div class="map-embed">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3730.2959825653477!2d106.01447547592616!3d20.796682594642607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135b9b1bd4ef5fb%3A0x74b8fcef19b1bbf2!2zVHLGsOG7nW5nIE1HIE5ndcOibiBUcuG7i25oIFPhuqF0!5e0!3m2!1svi!2s!4v1234567890123!5m2!1svi!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
-                        <p class="map-address">Ông Trương Xuân Hanh <br>& Bà Nguyễn Bích Mai</p>
+                        <p class="map-address">Ông Trương Xuân Hanh <br>Bà Nguyễn Bích Mai</p>
 
                         <p class="map-detail">Thôn Ngũ Phúc, xã Tam Đa, huyện Phù Cừ<br>(nay là xã Tống Trân) Tỉnh Hưng Yên</p>
                         <a href="https://maps.app.goo.gl/9kFuHz36DAwhyT2i6" target="_blank" class="common-button">Mở trên Google Maps</a>
@@ -218,7 +218,7 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                         <div class="map-embed">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.520859746834!2d105.86155087592403!3d20.972739889388693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135af11b5e8c38f%3A0x8b9e9c9c9c9c9c9c!2zMTIgxJDGsOG7nW5nIEzDqiwgSG_DoG5nIFRy4buLIDIsIEhvw6BuZyBWxINuIFRo4bulLCBIb8OgbmcgTWFpLCBIw6AgTuG7mWk!5e0!3m2!1svi!2s!4v1234567890123!5m2!1svi!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
-                        <p class="map-address">Ông Lê Văn Luận <br>& Bà Hoàng Thị Loan</p>
+                        <p class="map-address">Ông Lê Văn Luận <br>Bà Hoàng Thị Loan</p>
                         <p class="map-detail">Số nhà 12, đường Lê, thôn Hoàng Trì 2,<br>xã Hoàng Văn Thụ, Hoàng Mai, Hà Nội</p>
                         <a href="https://maps.app.goo.gl/a9fTqJd8aRsp1Vmc6" target="_blank" class="common-button">Mở trên Google Maps</a>
                     </div>
