Optimize images: Convert PNG/JPG to WebP format
- Convert hero_session.jpg to hero_session.webp
- Convert background_opening_section.png to background_opening_section.webp
- Convert invitation_content_background.png to invitation_content_background.webp
- Convert tk_chure.png to tk_chure.webp
- Convert tk_codau.png to tk_codau.webp
- Update all image references in HTML and CSS
- Significantly reduce file sizes for faster loading

--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                     </button>
                     <div class="bank-info collapsed" id="bankInfo">
                         <div class="bank-card">
-                            <img src="images/tk_chure.png" alt="Thông tin tài khoản chú rể">
+                            <img src="images/tk_chure.webp" alt="Thông tin tài khoản chú rể">
                         </div>
                         <div class="bank-card">
-                            <img src="images/tk_codau.png" alt="Thông tin tài khoản cô dâu">
+                            <img src="images/tk_codau.webp" alt="Thông tin tài khoản cô dâu">
                         </div>
                     </div>
                 </div>
