Add wedding photos and improve mobile invitation section spacing

--- a/index.html
+++ b/index.html
@@ -98,27 +98,39 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                 <h2 class="section-title">Ảnh Cưới</h2>
                 <div class="photo-grid">
                     <div class="photo-item">
-                        <img src="https://images.unsplash.com/photo-1606800052052-a08af7148866?w=600" alt="Wedding Photo 1">
+                        <img src="photos/CH704797.jpg" alt="Wedding Photo 1">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="https://images.unsplash.com/photo-1583939003579-730e3918a45a?w=600" alt="Wedding Photo 2">
+                        <img src="photos/CH704970.jpg" alt="Wedding Photo 2">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="https://images.unsplash.com/photo-1591604466107-ec97de577aff?w=600" alt="Wedding Photo 3">
+                        <img src="photos/CH705002.jpg" alt="Wedding Photo 3">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="https://images.unsplash.com/photo-1595771950248-3a9454a948a8?w=600" alt="Wedding Photo 4">
+                        <img src="photos/CH705041.jpg" alt="Wedding Photo 4">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="https://images.unsplash.com/photo-1519741497674-611481863552?w=600" alt="Wedding Photo 5">
+                        <img src="photos/CH705075.jpg" alt="Wedding Photo 5">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="https://images.unsplash.com/photo-1537633552985-df8429e8048b?w=600" alt="Wedding Photo 6">
+                        <img src="photos/CH705201.jpg" alt="Wedding Photo 6">
+                        <div class="photo-overlay"></div>
+                    </div>
+                    <div class="photo-item">
+                        <img src="photos/CH705563.jpg" alt="Wedding Photo 7">
+                        <div class="photo-overlay"></div>
+                    </div>
+                    <div class="photo-item">
+                        <img src="photos/CH705532.jpg" alt="Wedding Photo 8">
+                        <div class="photo-overlay"></div>
+                    </div>
+                    <div class="photo-item">
+                        <img src="photos/CH705888.jpg" alt="Wedding Photo 9">
                         <div class="photo-overlay"></div>
                     </div>
                 </div>
