Add two new bus pickup locations with maps

--- a/index.html
+++ b/index.html
@@ -203,6 +203,22 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                                 <td data-label="Trưởng xe">Chị Lan</td>
                                 <td data-label="Liên hệ" class="clickable-contact" onclick="window.location.href='tel:0123456791'">0123 456 791</td>
                             </tr>
+                            <tr>
+                                <td data-label="Giờ">08:00</td>
+                                <td data-label="Điểm đón" class="clickable-location" onclick="window.open('https://www.google.com/maps/search/?api=1&query=Trường+ĐH+Mỹ+Thuật+Công+nghiệp+360+Đê+La+Thành+Hà+Nội', '_blank')">
+                                    Trường ĐH Mỹ Thuật Công nghiệp - 360 Đê La Thành, Hà Nội 📍
+                                </td>
+                                <td data-label="Trưởng xe">Anh Nam</td>
+                                <td data-label="Liên hệ" class="clickable-contact" onclick="window.location.href='tel:0123456792'">0123 456 792</td>
+                            </tr>
+                            <tr>
+                                <td data-label="Giờ">07:45</td>
+                                <td data-label="Điểm đón" class="clickable-location" onclick="window.open('https://maps.app.goo.gl/R9Cr3pdQAfmphqjj7', '_blank')">
+                                    Cao Đẳng FPT Polytechnic - Trịnh Văn Bô, Hà Nội 📍
+                                </td>
+                                <td data-label="Trưởng xe">Anh Hùng</td>
+                                <td data-label="Liên hệ" class="clickable-contact" onclick="window.location.href='tel:0123456793'">0123 456 793</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
