Optimize wedding photos: Convert JPG to WebP (93% size reduction)

--- a/index.html
+++ b/index.html
@@ -98,39 +98,39 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                 <h2 class="section-title">Ảnh Cưới</h2>
                 <div class="photo-grid">
                     <div class="photo-item">
-                        <img src="photos/CH704797.jpg" alt="Wedding Photo 1">
+                        <img src="photos/CH704797.webp" alt="Wedding Photo 1">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH704970.jpg" alt="Wedding Photo 2">
+                        <img src="photos/CH704970.webp" alt="Wedding Photo 2">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH705002.jpg" alt="Wedding Photo 3">
+                        <img src="photos/CH705002.webp" alt="Wedding Photo 3">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH705041.jpg" alt="Wedding Photo 4">
+                        <img src="photos/CH705041.webp" alt="Wedding Photo 4">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH705075.jpg" alt="Wedding Photo 5">
+                        <img src="photos/CH705075.webp" alt="Wedding Photo 5">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH705201.jpg" alt="Wedding Photo 6">
+                        <img src="photos/CH705201.webp" alt="Wedding Photo 6">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH705563.jpg" alt="Wedding Photo 7">
+                        <img src="photos/CH705563.webp" alt="Wedding Photo 7">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH705532.jpg" alt="Wedding Photo 8">
+                        <img src="photos/CH705532.webp" alt="Wedding Photo 8">
                         <div class="photo-overlay"></div>
                     </div>
                     <div class="photo-item">
-                        <img src="photos/CH705888.jpg" alt="Wedding Photo 9">
+                        <img src="photos/CH705888.webp" alt="Wedding Photo 9">
                         <div class="photo-overlay"></div>
                     </div>
                 </div>
