Add calendar buttons for both wedding events

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                         <p class="event-date-large">27.12.2025</p>
                         <p class="event-description">TỨC NGÀY 08 THÁNG 11 NĂM ẤT TỴ</p>
                         <p class="event-location-label">TẠI TƯ GIA NHÀ GÁI</p>
-                        <p class="event-location">Số nhà 12, đường Lê, thôn Hoàng Trì 2,<br>xã Hoàng Văn Thụ, Hoàng Mai, Hà Nội</p>
+                        <p class="event-location">Số nhà 19, đường số 1, thôn Hoằng Trì 2, xã Hoằng Thắng (cũ) <br> (nay là xã Hoằng Châu) Tỉnh Thanh Hoá</p>
+                        <button class="common-button calendar-button" onclick="addToCalendar('engagement')">📅 Thêm vào Lịch</button>
                     </div>
                     <div class="event-card">
                         <h3 class="event-title">LỄ ĐÓN DÂU & TIỆC CƯỚI</h3>
@@ -155,6 +156,7 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                         <p class="event-description">TỨC NGÀY 09 THÁNG 11 NĂM ẤT TỴ</p>
                         <p class="event-location-label">TẠI TƯ GIA NHÀ TRAI</p>
                         <p class="event-location">Thôn Ngũ Phúc, xã Tam Đa, huyện Phù Cừ <br>(nay là xã Tống Trân) Tỉnh Hưng Yên</p>
+                        <button class="common-button calendar-button" onclick="addToCalendar('wedding')">📅 Thêm vào Lịch</button>
                     </div>
                 </div>
             </div>
@@ -244,7 +246,7 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.520859746834!2d105.86155087592403!3d20.972739889388693!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135af11b5e8c38f%3A0x8b9e9c9c9c9c9c9c!2zMTIgxJDGsOG7nW5nIEzDqiwgSG_DoG5nIFRy4buLIDIsIEhvw6BuZyBWxINuIFRo4bulLCBIb8OgbmcgTWFpLCBIw6AgTuG7mWk!5e0!3m2!1svi!2s!4v1234567890123!5m2!1svi!2s" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                         <p class="map-address">Ông Lê Văn Luận <br>Bà Hoàng Thị Loan</p>
-                        <p class="map-detail">Số nhà 12, đường Lê, thôn Hoàng Trì 2,<br>xã Hoàng Văn Thụ, Hoàng Mai, Hà Nội</p>
+                        <p class="map-detail"> Số nhà 19, đường số 1, thôn Hoằng Trì 2, xã Hoằng Thắng (cũ) <br> (nay là xã Hoằng Châu) Tỉnh Thanh Hoá</p>
                         <a href="https://maps.app.goo.gl/a9fTqJd8aRsp1Vmc6" target="_blank" class="common-button">Mở trên Google Maps</a>
                     </div>
                     
