--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                 <div class="event-cards">
                     <div class="event-card">
                         <h3 class="event-title">LỄ ĂN HỎI</h3>
-                        <p class="event-time">VÀO LÚC 09 GIỜ 00 | THỨ BẢY</p>
+                        <p class="event-time">VÀO LÚC 10 GIỜ 00 | THỨ BẢY</p>
                         <p class="event-date-large">27.12.2025</p>
                         <p class="event-description">TỨC NGÀY 08 THÁNG 11 NĂM ẤT TỴ</p>
                         <p class="event-location-label">TẠI TƯ GIA NHÀ GÁI</p>
-                        <p class="event-location">Số nhà 19, đường số 1, thôn Hoằng Trì 2, xã Hoằng Thắng (cũ) <br> (nay là xã Hoằng Châu) Tỉnh Thanh Hoá</p>
-                        <button class="common-button calendar-button" onclick="addToCalendar('engagement')">📅 Thêm vào Lịch</button>
+                        <p class="event-location">Số nhà 19, đường số 1, thôn Hoằng Trì 2, <br> xã Hoằng Thắng (cũ) (nay là xã Hoằng Châu) Tỉnh Thanh Hoá</p>
+                        <button class="common-button calendar-button" onclick="addToCalendar('engagement')">Thêm vào Lịch</button>
                     </div>
                     <div class="event-card">
                         <h3 class="event-title">LỄ ĐÓN DÂU & TIỆC CƯỚI</h3>
@@ -156,7 +156,7 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                         <p class="event-description">TỨC NGÀY 09 THÁNG 11 NĂM ẤT TỴ</p>
                         <p class="event-location-label">TẠI TƯ GIA NHÀ TRAI</p>
                         <p class="event-location">Thôn Ngũ Phúc, xã Tam Đa, huyện Phù Cừ <br>(nay là xã Tống Trân) Tỉnh Hưng Yên</p>
-                        <button class="common-button calendar-button" onclick="addToCalendar('wedding')">📅 Thêm vào Lịch</button>
+                        <button class="common-button calendar-button" onclick="addToCalendar('wedding')">Thêm vào Lịch</button>
                     </div>
                 </div>
             </div>
