Fix capitalization in opening quote text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="opening-content">
                     <p class="quote">"Người ta nói yêu muộn là yêu bằng tất cả những năm tháng từng trải.<br>
 Một người đã bước qua nhiều thăng trầm của cuộc sống,<br>
-một người dành cả tuổi trẻ để học tập và thay mẹ cha chăm lo cho em nhỏ."</p>
+Một người dành cả tuổi trẻ để học tập và thay mẹ cha chăm lo cho em nhỏ."</p>
 
                     <p>Chỉ hơn ba tháng gặp gỡ,<br>
 chúng tôi đã nhận ra sự đồng điệu và mong muốn về một tương lai chung —<br>
