Replace hardcoded 'chúng tôi' with dynamic inviteType text and hide gift section for parent senders

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ Một người đã bước qua nhiều thăng trầm của cuộc sống,<br>
 Một người dành cả tuổi trẻ để học tập và thay mẹ cha chăm lo cho em nhỏ."</p>
 
                     <p>Chỉ hơn ba tháng gặp gỡ,<br>
-chúng tôi đã nhận ra sự đồng điệu và mong muốn về một tương lai chung —<br>
+<span id="inviteType2">chúng tôi</span> đã nhận ra sự đồng điệu và mong muốn về một tương lai chung —<br>
 một tình yêu giản dị, bền chặt như <span class="highlight-text">ông bà ta ngày xưa.</span></p>
-                    <p>Trong ngày trọng đại nhất cuộc đời, <br><span class="highlight-text">Chúng tôi rất mong được sự chứng kiến và chúc phúc từ gia đình, bạn bè thân yêu</span>
+                    <p>Trong ngày trọng đại nhất cuộc đời, <br><span class="highlight-text"><span id="inviteType3">Chúng tôi</span> rất mong được sự chứng kiến và chúc phúc từ gia đình, bạn bè thân yêu</span>
                      </p>
                 </div>
             </div>
@@ -259,7 +259,7 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
             <div class="container">
                 <h2 class="section-title">Xác Nhận Tham Dự</h2>
                 <div class="rsvp-content">
-                    <p class="rsvp-intro">Rất mong nhận được sự xác nhận từ quý vị<br>để chúng tôi có thể chuẩn bị chu đáo hơn.</p>
+                    <p class="rsvp-intro">Rất mong nhận được sự xác nhận từ quý vị chúng tôi có thể chuẩn bị chu đáo hơn.</p>
                     <a href="https://forms.gle/Y2SQhm5wB67bYtQ47" target="_blank" class="common-button">
                         <span>📝</span> Xác nhận tham dự ngay
                     </a>
@@ -278,7 +278,7 @@ một tình yêu giản dị, bền chặt như <span class="highlight-text">ôn
                 <h2 class="section-title">Thông Tin Mừng Cưới</h2>
                 <div class="gift-content">
                     <p class="gift-intro">Sự hiện diện của quý vị là món quà quý giá nhất với chúng tôi.<br>
-                    Tuy nhiên, nếu quý vị muốn gửi lời chúc mừng,<br>chúng tôi xin cung cấp thông tin sau:</p>
+                    Tuy nhiên, nếu quý vị muốn gửi lời chúc mừng, chúng tôi xin cung cấp thông tin sau:</p>
                     <button class="common-button" onclick="toggleGiftInfo()">
                         <span class="toggle-text">Xem thông tin tài khoản</span>
                         <span class="toggle-icon">▼</span>
